tests/compile-fail/double_state_event.stderr
error: State and event combination specified multiple times, remove duplicates.
 --> $DIR/double_state_event.rs:7:5
  |
7 |     State1 + Event1 = State3, //~ State and event combination specified multiple times, remove duplicates.
  |     ^^^^^^
